--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: PowerGemsExpansionPack
 version: '1.0'
-main: Master.MPG
+main: master.MPG
 api-version: '1.20'
 load: STARTUP
 authors: [ LeonardisG, Iseal ]
