--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>MorePowerGems</name>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -52,6 +52,10 @@
 
     <repositories>
         <repository>
+            <id>iseal.dev</id>
+            <url>https://maven.iseal.dev/repository/maven-releases/</url>
+        </repository>
+        <repository>
             <id>spigotmc-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
@@ -59,29 +63,28 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
     </repositories>
 
     <dependencies>
+        <!-- Spigot API 1.21 -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.20.1-R0.1-SNAPSHOT</version>
+            <version>1.21-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
-            <groupId>com.github.ISeal-plugin-developement</groupId>
+            <groupId>dev.iseal</groupId>
             <artifactId>PowerGems</artifactId>
-            <version>3.6.1.0-BETA7-3550558170ff0da808fd4b2dc103c83be6817244</version>
+            <version>3.6.1.1</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
-            <groupId>com.github.ISeal-plugin-developement</groupId>
+            <groupId>dev.iseal</groupId>
             <artifactId>SealLib</artifactId>
-            <version>1.1.3.0</version>
+            <version>1.2.0.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
